--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,6 +96,7 @@ jobs:
           REACT_APP_API_ENDPOINT: "https://staging-editor-api.raspberrypi.org"
           PUBLIC_URL: "http://localhost:3000"
           ASSETS_URL: "http://localhost:3000"
+          REACT_APP_PLAUSIBLE_SOURCE: ""
 
       - name: Archive cypress artifacts
         uses: actions/upload-artifact@v3
