Use quiet option when running Cypress specs in CI
This option [1] effectively enables the `--quiet` option [2] on the
`cypress run` CLI command which makes the output from the Cypress specs
a lot less verbose. This in turn makes it easier to see the wood for the
trees when a spec fails.

Note that it will still be possible to see verbose output when running
the specs locally.

[1]: https://github.com/cypress-io/github-action/blob/master/README.md#quiet-flag
[2]: https://docs.cypress.io/guides/guides/command-line#Options

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -92,6 +92,7 @@ jobs:
             yarn start
             yarn start:wc
           wait-on: "http://localhost:3000, http://localhost:3001"
+          quiet: true
         env:
           REACT_APP_API_ENDPOINT: "https://staging-editor-api.raspberrypi.org"
           PUBLIC_URL: "http://localhost:3000"
