Improvements to Cypress specs in CI (#1017)
See individual commit notes for details:
* [Avoid repeated `URIError` in Cypress spec CI
output](https://github.com/RaspberryPiFoundation/editor-ui/commit/db0225e4ec2ea460a70c7703f48f84ed945ebde1)
* [Reinstate default Cypress screenshot
behaviour](https://github.com/RaspberryPiFoundation/editor-ui/commit/9beab733c90c09e6ec6be407060b1a5c1a9b8906)
* [Use `quiet` option when running Cypress specs in
CI](https://github.com/RaspberryPiFoundation/editor-ui/commit/d8bfcca5f45efacb7f1a4eaa1075c6d8e00e3318)

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -92,10 +92,12 @@ jobs:
             yarn start
             yarn start:wc
           wait-on: "http://localhost:3000, http://localhost:3001"
+          quiet: true
         env:
           REACT_APP_API_ENDPOINT: "https://staging-editor-api.raspberrypi.org"
           PUBLIC_URL: "http://localhost:3000"
           ASSETS_URL: "http://localhost:3000"
+          REACT_APP_PLAUSIBLE_SOURCE: ""
 
       - name: Archive cypress artifacts
         uses: actions/upload-artifact@v3
