--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -94,7 +94,7 @@ jobs:
           wait-on: "http://localhost:3000, http://localhost:3001"
           quiet: true
         env:
-          REACT_APP_API_ENDPOINT: "https://staging-editor-api.raspberrypi.org"
+          REACT_APP_API_ENDPOINT: "https://test-editor-api.raspberrypi.org"
           PUBLIC_URL: "http://localhost:3000"
           ASSETS_URL: "http://localhost:3000"
           REACT_APP_PLAUSIBLE_SOURCE: ""
