--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-REACT_APP_AUTHENTICATION_CLIENT_ID='editor-dev'
+REACT_APP_AUTHENTICATION_CLIENT_ID='editor-app-client'
 REACT_APP_AUTHENTICATION_URL='http://localhost:9001'
 REACT_APP_API_ENDPOINT='http://localhost:3009'
 REACT_APP_GOOGLE_TAG_MANAGER_ID=''
