--- a/.env.webcomponent.example
+++ b/.env.webcomponent.example
@@ -5,3 +5,4 @@ REACT_APP_SENTRY_ENV='local'
 PUBLIC_URL=http://localhost:3010
 REACT_APP_IDENTITY_URL='http://localhost:3002'
 REACT_APP_API_ENDPOINT='http://localhost:3009'
+PORT=3011
