Try specifying the web-component path

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ REACT_APP_PLAUSIBLE_SOURCE=''
 REACT_APP_SENTRY_DSN=''
 REACT_APP_SENTRY_ENV='local'
 PUBLIC_URL='http://localhost:3010'
-# ASSETS_URL='https://staging-editor-static.raspberrypi.org/branches/main'
+ASSETS_URL='http://localhost:3010'
