--- a/.env.webcomponent.example
+++ b/.env.webcomponent.example
@@ -3,5 +3,6 @@ REACT_APP_SENTRY_DSN=''
 REACT_APP_SENTRY_ENV='local'
 # NB This is the URL of react-ui, rather than the web component
 PUBLIC_URL=http://localhost:3010
-REACT_APP_IDENTITY_URL='http://localhost:3002'
+REACT_APP_IDENTITY_URL='http://localhost:3011'
 REACT_APP_API_ENDPOINT='http://localhost:3009'
+ASSETS_URL='http://localhost:3010'
