fix CI to trigger on PR not branch push

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,10 +2,11 @@ name: CI-CD
 
 on:
   push:
-    branches:
-      - "**"
     tags:
       - "**"
+  pull_request:
+    branches:
+      - '**'
 
 jobs:
   lint:
