--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,11 +2,13 @@ name: CI-CD
 
 on:
   push:
+    branches:
+      - main
     tags:
       - "**"
   pull_request:
     branches:
-      - '**'
+      - "**"
 
 jobs:
   lint:
