--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "three": "^0.140.0",
     "ts-pnp": "1.2.0",
     "watch": "^1.0.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "node scripts/start.js",
