--- a/.env.webcomponent.example
+++ b/.env.webcomponent.example
@@ -6,3 +6,4 @@ PUBLIC_URL=http://localhost:3012
 REACT_APP_IDENTITY_URL='http://localhost:3011'
 REACT_APP_API_ENDPOINT='http://localhost:3009'
 ASSETS_URL='http://localhost:3011'
+PUBLIC_URL = "http://localhost:3011"
