--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-redux": "^7.2.5",
     "react-refresh": "^0.8.3",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.7.0",
+    "react-router-dom": "6.24.0",
     "react-tabs": "^3.2.3",
     "react-timer-hook": "^3.0.5",
     "react-toastify": "^8.1.0",
