--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "cypress": "12.12.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "dotenv-webpack": "latest",
+    "dotenv-webpack": "8.1.0",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -142,7 +142,7 @@
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "6.1.1",
-    "html-webpack-plugin": "latest",
+    "html-webpack-plugin": "5.6.0",
     "jest": "^29.1.2",
     "jest-circus": "^29.1.2",
     "jest-css-modules-transform": "^4.4.2",
