--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "i18next-browser-languagedetector": "^7.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest-axe": "^7.0.0",
+    "jest-canvas-mock": "^2.5.2",
     "js-convert-case": "^4.2.0",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
@@ -108,7 +109,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.17.10",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@react-three/test-renderer": "^8.0.12",
+    "@react-three/test-renderer": "8.2.1",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.2.0",
