trying to fix cypress in ci

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -94,7 +94,7 @@ jobs:
           start: |
             yarn start
             yarn start:wc
-          wait-on: "http://localhost:3010, http://localhost:3011"
+          wait-on: "http://localhost:3011"
           quiet: true
         env:
           REACT_APP_API_ENDPOINT: "https://test-editor-api.raspberrypi.org"
