remove .webcomponent things

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,14 +123,12 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build site and WC bundle
+      - name: Build WC bundle
         run: |
-          if [[ "${{ inputs.environment }}" == "production" ]]; then
-            yarn build
-          else
+          if [[ "${{ inputs.environment }}" != "production" ]]; then
             yarn build:dev
           fi
-          yarn build:wc
+          yarn build
         env:
           PUBLIC_URL: ${{ needs.setup-environment.outputs.public_url }}
           ASSETS_URL: ${{ needs.setup-environment.outputs.assets_url }}
