--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -92,14 +92,13 @@ jobs:
         with:
           install: false
           start: |
-            yarn start
             yarn start:wc
-          wait-on: "http://localhost:3010, http://localhost:3011"
+          wait-on: "http://localhost:3011"
           quiet: true
         env:
           REACT_APP_API_ENDPOINT: "https://test-editor-api.raspberrypi.org"
-          PUBLIC_URL: "http://localhost:3010"
-          ASSETS_URL: "http://localhost:3010"
+          PUBLIC_URL: "http://localhost:3011"
+          ASSETS_URL: "http://localhost:3011"
           REACT_APP_PLAUSIBLE_SOURCE: ""
 
       - name: Archive cypress artifacts
