--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "copy-webpack-plugin": "^6.4.0",
+    "copy-webpack-plugin": "12.0.2",
     "css-loader": "4.3.0",
     "curl": "^0.1.4",
     "cypress": "12.12.0",
