--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -92,7 +92,7 @@ jobs:
         with:
           install: false
           start: |
-            yarn start:wc
+            yarn start
           wait-on: "http://localhost:3011"
           quiet: true
         env:
