Redundant editor code tidy up (#1103)
closes https://github.com/RaspberryPiFoundation/editor-ui/issues/1088

---------

Co-authored-by: Scott <scott.adams@raspberrypi.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ x-app: &x-app
 services:
   react-ui-wc:
     <<: *x-app
-    command: yarn start:wc
+    command: yarn start
     ports:
       - "3011:3011"
     container_name: react-ui-wc
