--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,7 @@
       {
         "singleQuote": false,
         "jsxSingleQuote": false,
-        "trailingComma": "es5",
+        "trailingComma": "all",
         "semi": true,
         "bracketSpacing": true,
         "arrowParens": "always"
