--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ REACT_APP_SENTRY_ENV='local'
 PUBLIC_URL='http://localhost:3011'
 ASSETS_URL='http://localhost:3011'
 REACT_APP_GOOGLE_TAG_MANAGER_ID=''
+REACT_APP_API_ENDPOINT='http://localhost:3009'
 REACT_APP_PLAUSIBLE_DATA_DOMAIN=''
 REACT_APP_PLAUSIBLE_SOURCE=''
