--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,14 @@ x-app: &x-app
     context: .
   volumes:
     - .:/app
+    - node_modules:/app/node_modules
     - /var/run/docker.sock:/var/run/docker.sock
-    - /app/.yarn
-    - $PWD/.yarn/plugins:/app/.yarn/plugins
-    - $PWD/.yarn/releases:/app/.yarn/releases
-    - $PWD/.yarn/patches:/app/.yarn/patches
-    - $PWD/.yarn/sdks:/app/.yarn/sdks
-    - $PWD/.yarn/versions:/app/.yarn/versions
   stdin_open: true
 services:
-  react-ui-wc:
+  app:
     <<: *x-app
-    command: yarn start
+    command: sh -c "yarn install && yarn start"
     ports:
       - "3011:3011"
-    container_name: react-ui-wc
+volumes:
+  node_modules: null
