--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+EDITOR_STANDALONE_URL='http://localhost:3012'
 REACT_APP_AUTHENTICATION_CLIENT_ID='editor-dev'
 REACT_APP_SENTRY_DSN=''
 REACT_APP_SENTRY_ENV='local'
