adding design system alert to warn users when they exceed the character limit

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@hello-pangea/dnd": "^16.2.0",
     "@juggle/resize-observer": "^3.3.1",
     "@lezer/highlight": "^1.0.0",
-    "@raspberrypifoundation/design-system-core": "^0.1.9",
-    "@raspberrypifoundation/design-system-react": "^0.1.5",
+    "@raspberrypifoundation/design-system-core": "^1.6.0",
+    "@raspberrypifoundation/design-system-react": "^1.6.0",
     "@react-three/drei": "9.114.3",
     "@react-three/fiber": "^8.0.13",
     "@reduxjs/toolkit": "^1.6.2",
@@ -45,6 +45,7 @@
     "js-convert-case": "^4.2.0",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
+    "material-symbols": "^0.27.0",
     "mime-types": "^2.1.35",
     "node-html-parser": "^6.1.5",
     "oidc-client": "^1.11.5",
