--- a/storybook/package.json
+++ b/storybook/package.json
@@ -7,6 +7,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@raspberrypifoundation/design-system-react": "^1.6.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@storybook/addon-actions": "6.5.10",
     "@storybook/addon-essentials": "6.5.10",
