--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -125,10 +125,9 @@ jobs:
 
       - name: Build WC bundle
         run: |
-          # TODO: Reinitialise when storybook build is fixed
-          # if [[ "${{ inputs.environment }}" != "production" ]]; then
-          #   yarn build:dev
-          # fi
+          if [[ "${{ inputs.environment }}" != "production" ]]; then
+            yarn build:dev
+          fi
           yarn build
         env:
           PUBLIC_URL: ${{ needs.setup-environment.outputs.public_url }}
