--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@raspberrypifoundation/editor-ui",
   "version": "0.28.7",
   "private": true,
+  "workspaces": ["storybook"],
   "dependencies": {
     "@apollo/client": "^3.7.8",
     "@babel/core": "^7.17.10",
