--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@raspberrypifoundation/editor-ui",
   "version": "0.28.8",
   "private": true,
-  "workspaces": ["storybook"],
+  "workspaces": [
+    "storybook"
+  ],
   "dependencies": {
     "@apollo/client": "^3.7.8",
     "@babel/core": "^7.17.10",
