WIP: Hide menu bar and fix assets
* Use the CCW fork of the scratch-gui project so that we can set the
  `menuBarHidden` property to hide the menu bar.

* Don't set `backpackVisible` or `backpackHost` properties, because we
  probably don't want to display this. TODO: Check whether CS First
  displays it.

* Don't set `canEditTitle`, `showComingSoon` or `onClickLogo`
  properties, because they all relate to things that are displayed in
  the menu bar.

* Remove the code relating to `simulateScratchDesktop` - I don't think
  we need it! TODO: Check this!

* Copy the relevant assets from the scratch-gui package so that they are
  made available at the expected URLs. Note that the location of the
  assets has changed in newer versions of the scratch-gui package.

* Remove files in the `scratch/dist` directory from the git repo and
  ignore files in that directory.

--- a/scratch/package.json
+++ b/scratch/package.json
@@ -9,6 +9,7 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "@raspberrypifoundation/scratch-gui": "0.1.0-raspberrypifoundation.20230606092831",
     "scratch-gui": "^5.1.27"
   },
   "devDependencies": {
