Fix dev-container tests, remove unused extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,8 +39,6 @@
     "vscode": {
       "extensions": [
         "ms-azuretools.vscode-docker",
-        "ninoseki.vscode-gem-lens",
-        "rebornix.ruby",
         "eamodio.gitlens",
         "github.vscode-pull-request-github",
         "wmaurer.change-case",
@@ -53,7 +51,6 @@
         "pkosta2005.heroku-command",
         "yzhang.markdown-all-in-one",
         "mikestead.dotenv",
-        "wingrunr21.vscode-ruby",
         "ms-vscode.remote-repositories",
         "github.remotehub",
         "circleci.circleci",
@@ -68,10 +65,7 @@
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "zsh",
-        "jest.autoRun": {
-          "watch": false,
-          "onSave": "test-src-file"
-        }
+        "jest.jestCommandLine": "yarn test"
       }
     }
   },
