--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.03
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
     #   run: yarn stylelint
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.03
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -68,7 +68,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
 
   test-cypress:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.03
     steps:
       - name: Checkout
         uses: actions/checkout@v1
