--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ on:
 
 jobs:
   setup-environment:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.03
     outputs:
       deploy_dir: ${{ steps.setup-environment.outputs.deploy_dir }}
       public_url: ${{ steps.setup-environment.outputs.public_url }}
@@ -95,7 +95,7 @@ jobs:
           fi
 
   build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.03
     needs: setup-environment
     environment:
       name: ${{ inputs.environment }}
