--- a/.github/workflows/dependabot-pull-requests.yml
+++ b/.github/workflows/dependabot-pull-requests.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   add-to-project:
     name: Add issue to project
-    runs-on: 22.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/add-to-project@v1.0.2
         with:
