Redirect to Experience CS for Scratch projects
This isn't great because the redirect can once the project has been
loaded from the API, which is after the Code Editor UI appears.
Hopefully it's good enough for a proof of concept, though.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ REACT_APP_GOOGLE_TAG_MANAGER_ID=''
 REACT_APP_API_ENDPOINT='http://localhost:3009'
 REACT_APP_PLAUSIBLE_DATA_DOMAIN=''
 REACT_APP_PLAUSIBLE_SOURCE=''
+EXPERIENCE_CS_URL='http://localhost:3000'
