--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "highcharts-react-official": "^3.1.0",
     "i18next": "^22.0.3",
     "i18next-browser-languagedetector": "^7.0.0",
+    "i18next-http-backend": "^3.0.2",
     "identity-obj-proxy": "3.0.0",
     "jest-axe": "^7.0.0",
     "jest-canvas-mock": "^2.5.2",
