--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@sentry/tracing": "7.16.0",
     "@szhsin/react-menu": "^3.2.0",
     "apollo-link-sentry": "^3.2.3",
+    "assert": "^2.1.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.2",
     "codemirror": "^6.0.1",
@@ -51,7 +52,7 @@
     "node-html-parser": "^6.1.5",
     "oidc-client": "^1.11.5",
     "parse-link-header": "^2.0.0",
-    "plotly.js-dist": "^3.0.1",
+    "plotly.js": "^3.0.2",
     "prismjs": "^1.29.0",
     "prompts": "2.4.0",
     "prop-types": "^15.8.1",
@@ -77,6 +78,7 @@
     "react-toggle": "^4.1.3",
     "redux-oidc": "^4.0.0-beta1",
     "skulpt": "^1.2.0",
+    "stream-browserify": "^3.0.0",
     "three": "0.169.0",
     "ts-pnp": "1.2.0",
     "url": "^0.11.4",
