--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "three": "0.169.0",
     "ts-pnp": "1.2.0",
     "url": "^0.11.4",
+    "uuid": "^11.1.0",
     "watch": "^1.0.2",
     "web-vitals": "^1.0.1"
   },
