--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "classnames": "^2.3.2",
     "codemirror": "^6.0.1",
     "container-query-polyfill": "^1.0.2",
-    "date-fns": "^2.29.3",
+    "date-fns": "^4.1.0",
     "eslint-config-prettier": "^8.8.0",
     "file-saver": "^2.0.5",
     "fs-extra": "^9.0.1",
@@ -39,6 +39,7 @@
     "highcharts-react-official": "^3.1.0",
     "i18next": "^22.0.3",
     "i18next-browser-languagedetector": "^7.0.0",
+    "i18next-http-backend": "^3.0.2",
     "identity-obj-proxy": "3.0.0",
     "jest-axe": "^7.0.0",
     "jest-canvas-mock": "^2.5.2",
