--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "ts-pnp": "1.2.0",
     "url": "^0.11.4",
     "watch": "^1.0.2",
+    "web-tree-sitter": "0.25.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
