--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "babel-jest": "^29.1.2",
     "babel-loader": "^8.2.5",
     "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-plugin-prismjs": "^2.1.0",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
