--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@hello-pangea/dnd": "^16.2.0",
     "@juggle/resize-observer": "^3.3.1",
     "@lezer/highlight": "^1.0.0",
-    "@raspberrypifoundation/design-system-core": "^1.6.0",
-    "@raspberrypifoundation/design-system-react": "^1.7.0",
+    "@raspberrypifoundation/design-system-react": "2.0.0",
     "@react-three/drei": "9.114.3",
     "@react-three/fiber": "^8.0.13",
     "@reduxjs/toolkit": "^1.6.2",
