--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@juggle/resize-observer": "^3.3.1",
     "@lezer/highlight": "^1.0.0",
     "@raspberrypifoundation/design-system-react": "^2.7.0",
+    "@raspberrypifoundation/python-friendly-error-messages": "^0.1.2",
     "@react-three/drei": "9.114.3",
     "@react-three/fiber": "^8.0.13",
     "@reduxjs/toolkit": "^1.6.2",
