--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-  "presets": ["react-app"],
+  "presets": [
+    "react-app",
+    "@babel/preset-env",
+    "@babel/preset-react",
+    "@babel/preset-typescript"
+  ],
   "plugins": [
     [
       "prismjs",
