--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-link-sentry": "^3.2.3",
     "assert": "^2.1.0",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "codemirror": "^6.0.1",
     "container-query-polyfill": "^1.0.2",
@@ -43,8 +44,10 @@
     "jest-axe": "^7.0.0",
     "jest-canvas-mock": "^2.5.2",
     "js-convert-case": "^4.2.0",
+    "js-file-download": "^0.4.12",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
+    "lodash.bindall": "^4.4.0",
     "marked": "^15.0.6",
     "material-symbols": "^0.27.0",
     "mime-types": "^2.1.35",
@@ -76,6 +79,7 @@
     "react-toastify": "^8.1.0",
     "react-toggle": "^4.1.3",
     "redux-oidc": "^4.0.0-beta1",
+    "scratch-gui": "https://github.com/scratchfoundation/scratch-editor.git#subdirectory=packages/scratch-gui",
     "skulpt": "^1.2.0",
     "stream-browserify": "^3.0.0",
     "three": "0.169.0",
@@ -111,6 +115,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.28.5",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@react-three/test-renderer": "8.2.1",
     "@svgr/webpack": "5.5.0",
