--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,3 +3,11 @@ nodeLinker: node-modules
 yarnPath: .yarn/releases/yarn-3.4.1.cjs
 
 checksumBehavior: "update"
+
+npmScopes:
+  RaspberryPiFoundation:
+    npmRegistryServer: "https://npm.pkg.github.com"
+
+npmRegistries:
+  "https://npm.pkg.github.com":
+    npmAuthToken: "${GITHUB_TOKEN}"
