--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.34.2",
   "private": true,
   "dependencies": {
+    "@RaspberryPiFoundation/scratch-gui": "0.1.0-experience-cs.20251218100358",
     "@apollo/client": "^3.7.8",
     "@babel/core": "^7.17.10",
     "@codemirror/commands": "^6.1.1",
@@ -79,7 +80,6 @@
     "react-toastify": "^8.1.0",
     "react-toggle": "^4.1.3",
     "redux-oidc": "^4.0.0-beta1",
-    "scratch-gui": "https://github.com/scratchfoundation/scratch-editor.git#subdirectory=packages/scratch-gui",
     "skulpt": "^1.2.0",
     "stream-browserify": "^3.0.0",
     "three": "0.169.0",
@@ -192,6 +192,7 @@
     "stylelint-scss": "3.12.0",
     "stylelint-use-logical": "^2.1.0",
     "terser-webpack-plugin": "4.2.3",
+    "to-string-loader": "^1.2.0",
     "url-loader": "4.1.1",
     "webgl-mock-threejs": "^0.0.1",
     "webpack": "5.95.0",
