--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@react-three/test-renderer": "8.2.1",
     "@svgr/webpack": "5.5.0",
+    "@testing-library/cypress": "^10.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "14.3.1",
     "@testing-library/user-event": "^12.1.10",
