--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.34.2",
   "private": true,
   "dependencies": {
-    "@RaspberryPiFoundation/scratch-gui": "0.1.0-experience-cs.20251218100358",
+    "@RaspberryPiFoundation/scratch-gui": "link:../scratch-editor/packages/scratch-gui",
     "@apollo/client": "^3.7.8",
     "@babel/core": "^7.17.10",
     "@codemirror/commands": "^6.1.1",
@@ -170,10 +170,12 @@
     "path-browserify": "^1.0.1",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
+    "postcss-simple-vars": "5.0.2",
     "prettier": "^2.8.8",
     "react-dev-utils": "^11.0.3",
     "react-test-renderer": "^17.0.2",
