--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ x-app: &x-app
     context: .
   volumes:
     - .:/app
+    - ../scratch-editor:/scratch-editor
     - node_modules:/app/node_modules
     - /var/run/docker.sock:/var/run/docker.sock
   stdin_open: true
