--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
+    "postcss-scss": "4.0.9",
     "postcss-simple-vars": "5.0.2",
     "prettier": "^2.8.8",
     "react-dev-utils": "^11.0.3",
