--- a/.github/workflows/close_stale_issues_and_prs.yml
+++ b/.github/workflows/close_stale_issues_and_prs.yml
@@ -2,6 +2,12 @@ name: 'Close stale issues and PRs'
 on:
   schedule:
     - cron: '30 2 * * *'
+  workflow_dispatch:
+
+permissions:
+  actions: write
+  issues: write
+  pull-requests: write
 
 jobs:
   stale:
