Setup sample projects for the web component test page
It's handle to be able to quickly try out different projects, and later when we introduce scratch it would be useful to be able to get a scratch project from the test page without a dependnecy on another app.

I've set up json files for the projects and used AI to generate interesting multi-file html and python projects

--- a/package.json
+++ b/package.json
@@ -89,8 +89,8 @@
     "build": "NODE_ENV=production BABEL_ENV=production webpack build -c ./webpack.config.js",
     "build:dev": "yarn install --check-cache && yarn run build-storybook",
     "build-storybook": "cd ./storybook && yarn install && yarn run build-storybook -- -o ../public/storybook --loglevel warn",
-    "lint": "eslint 'src/**/*.{js,jsx,json}' cypress/**/*.js",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,json}' cypress/**/*.js",
+    "lint": "eslint 'src/**/*.{js,jsx}' cypress/**/*.js",
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx}' cypress/**/*.js",
     "stylelint": "stylelint src/**/*.scss",
     "test": "node scripts/test.js --transformIgnorePatterns 'node_modules/(?!three)/'",
     "storybook": "cd storybook && rm -rf ./node_modules/.cache/storybook && yarn run storybook",
