Run eslint on our cypress tests
My editor was reformatting them by default, rather than configure the settings of my eslint extension, I thought we should apply the same linting rules the tests as our other code.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,5 +43,14 @@
         "arrowParens": "always"
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["cypress/**/*.js"],
+      "globals": {
+        "cy": "readonly",
+        "Cypress": "readonly"
+      }
+    }
+  ]
 }
