--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,9 @@
+checksumBehavior: update
+
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-3.4.1.cjs
-
-checksumBehavior: "update"
+yarnPath: .yarn/releases/yarn-4.12.0.cjs
