Allow scratch to post messages back to container
Now the iframe is on a separate domain, we can't use window.location.origin to specify the target domain.

Generally it is recommended [1] to set targetOrigin as otherwise it's possible for data to be intercepted [2], however this this doesn't apply here as:
+ We want this to be embeddable from different domains
+ We're restricting the post to just the top containing window
+ We already have measures in place to restrict where the iframe is embedded
+ We aren't sending any secret information, just notifying of events

We could pass a URL into the iframe as a URL parameter and use this, however this won't add any extra security as the containing site could modify this parameter.

[1] https://developer.mozilla.org/en-US/docs/Web/API/Window/postMessage#targetorigin
[2] https://cheatsheetseries.owasp.org/cheatsheets/XS_Leaks_Cheat_Sheet.html#attacks-on-postmessage-communication

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ on:
         default: "review"
         type: string
       react_app_allowed_iframe_origins:
-        required: true
+        required: false
         default: "https://staging-editor.raspberrypi.org,https://staging-editor-static.raspberrypi.org"
         type: string
         
